RESOLVED FIXED286111
[visionOS] theverge.com: ~3-4 second web process hangs when focusing search field in More+ menu
https://bugs.webkit.org/show_bug.cgi?id=286111
Summary [visionOS] theverge.com: ~3-4 second web process hangs when focusing search f...
Wenson Hsieh
Reported 2025-01-16 18:39:06 PST
Attachments
Wenson Hsieh
Comment 1 2025-01-16 18:51:27 PST
EWS
Comment 2 2025-01-17 07:30:59 PST
Committed 289055@main (5cbe6491f0bb): <https://commits.webkit.org/289055@main> Reviewed commits have been landed. Closing PR #39167 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.